--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ecd665">  <td>24/09/26 13:07:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelGuestCheckout.testguestcheckout()[pri:0, instance:sanity.bateel.SanityBateelGuestCheckout@267517e4]">testguestcheckout</td> 
-  <td>main@2141849216</td>   <td></td> </tr>
+<tr bgcolor="908383">  <td>24/10/08 18:59:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelProductDetails.testBateelproductfilldetails()[pri:0, instance:sanity.bateel.SanityBateelProductDetails@6272c96f]">testBateelproductfilldetails</td> 
+  <td>main@797724590</td>   <td></td> </tr>
 </table>
