--- a/test-output/old/Local Test Suite/methods.html
+++ b/test-output/old/Local Test Suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Local Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a779c">  <td>24/09/16 14:49:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelGuestCheckout.testguestcheckout()[pri:0, instance:sanity.bateel.SanityBateelGuestCheckout@6b587673]">testguestcheckout</td> 
-  <td>main@300355969</td>   <td></td> </tr>
+<tr bgcolor="807d8a">  <td>24/10/09 12:39:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBateelLogincheckout.testBateeladdtocartitemloginuser()[pri:0, instance:sanity.bateel.SanityBateelLogincheckout@7b2a3ff8]">testBateeladdtocartitemloginuser</td> 
+  <td>main@1355533479</td>   <td></td> </tr>
 </table>
